# ZPA-BackupNrestore

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  MANIFEST.in  PROGRESS.md  README.md  SPEC.md  TASKS.md  ZPA_API_COVERAGE_AUDIT.md  build_macos_app.py  pyproject.toml  test_api_coverage_expansion.py  test_audit_ledger.py  test_disaster_recovery.py  test_execution_journal.py  test_restore_assurance.py  test_restore_simulation.py  test_selective_restore.py  test_snapshot_catalog.py  test_v2_architecture.py  test_zpa_cloner.py  test_zpa_cloner_app.py  test_zpa_policy_tool.py  zpa_cloner.py  zpa_cloner_app.py  zpa_integrity.py  zpa_policy_tool.py  zpa_report.py  zpa_resources.py
.github/: pull_request_template.md
docs/: ARCHITECTURE.md  OPERATIONS.md  PROCESS.md  RELEASE.md
zpa_backup_restore/: __init__.py  __main__.py  cli.py  errors.py  security.py  version.py
zpa_backup_restore/api/: __init__.py  audit.py  client.py
zpa_backup_restore/core/: __init__.py  backup.py  catalog.py  diff.py  integrity.py  mapping.py  restore.py  selection.py  simulation.py
zpa_backup_restore/domain/: __init__.py  models.py
zpa_backup_restore/reporting/: __init__.py  disaster_recovery.py  html_report.py
zpa_backup_restore/repositories/: __init__.py  audit.py  catalog.py  jsonl_audit_ledger.py  sqlite_catalog.py
zpa_backup_restore/resources/: __init__.py  app_connector_groups.py  application_segments.py  cbi.py  identity_references.py  inspection_controls.py  inspection_profiles.py  lss_configs.py  microtenants.py  model.py  policy_rules.py  (+10 more)
(+168 files in other folders)
